[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/images/orange_plain.tres" type="Material" id=1]
[ext_resource path="res://scripts/JumperStraight.gd" type="Script" id=2]

[sub_resource type="CylinderMesh" id=1]
height = 0.25

[sub_resource type="ConvexPolygonShape" id=2]
points = PoolVector3Array( 0, 0.125, 1, 0.0980171, 0.125, 0.995185, 0.19509, 0.125, 0.980785, 0.290285, 0.125, 0.95694, 0.382683, 0.125, 0.92388, 0.471397, 0.125, 0.881921, 0.55557, 0.125, 0.83147, 0.634393, 0.125, 0.77301, 0.707107, 0.125, 0.707107, 0.77301, 0.125, 0.634393, 0.83147, 0.125, 0.55557, 0.881921, 0.125, 0.471397, 0.92388, 0.125, 0.382683, 0.95694, 0.125, 0.290285, 0.980785, 0.125, 0.19509, 0.995185, 0.125, 0.0980171, 1, 0.125, 6.12303e-17, 0.995185, 0.125, -0.0980171, 0.980785, 0.125, -0.19509, 0.95694, 0.125, -0.290285, 0.92388, 0.125, -0.382683, 0.881921, 0.125, -0.471397, 0.83147, 0.125, -0.55557, 0.77301, 0.125, -0.634393, 0.707107, 0.125, -0.707107, 0.634393, 0.125, -0.77301, 0.55557, 0.125, -0.83147, 0.471397, 0.125, -0.881921, 0.382683, 0.125, -0.92388, 0.290285, 0.125, -0.95694, 0.19509, 0.125, -0.980785, 0.0980171, 0.125, -0.995185, 1.22461e-16, 0.125, -1, -0.0980171, 0.125, -0.995185, -0.19509, 0.125, -0.980785, -0.290285, 0.125, -0.95694, -0.382683, 0.125, -0.92388, -0.471397, 0.125, -0.881921, -0.55557, 0.125, -0.83147, -0.634393, 0.125, -0.77301, -0.707107, 0.125, -0.707107, -0.77301, 0.125, -0.634393, -0.83147, 0.125, -0.55557, -0.881921, 0.125, -0.471397, -0.92388, 0.125, -0.382683, -0.95694, 0.125, -0.290285, -0.980785, 0.125, -0.19509, -0.995185, 0.125, -0.0980171, -1, 0.125, -1.83691e-16, -0.995185, 0.125, 0.0980171, -0.980785, 0.125, 0.19509, -0.95694, 0.125, 0.290285, -0.92388, 0.125, 0.382683, -0.881921, 0.125, 0.471397, -0.83147, 0.125, 0.55557, -0.77301, 0.125, 0.634393, -0.707107, 0.125, 0.707107, -0.634393, 0.125, 0.77301, -0.55557, 0.125, 0.83147, -0.471397, 0.125, 0.881921, -0.382683, 0.125, 0.92388, -0.290285, 0.125, 0.95694, -0.19509, 0.125, 0.980785, -0.0980171, 0.125, 0.995185, -2.44921e-16, 0.125, 1, 0, 0.075, 1, 0.0980171, 0.075, 0.995185, 0.19509, 0.075, 0.980785, 0.290285, 0.075, 0.95694, 0.382683, 0.075, 0.92388, 0.471397, 0.075, 0.881921, 0.55557, 0.075, 0.83147, 0.634393, 0.075, 0.77301, 0.707107, 0.075, 0.707107, 0.77301, 0.075, 0.634393, 0.83147, 0.075, 0.55557, 0.881921, 0.075, 0.471397, 0.92388, 0.075, 0.382683, 0.95694, 0.075, 0.290285, 0.980785, 0.075, 0.19509, 0.995185, 0.075, 0.0980171, 1, 0.075, 6.12303e-17, 0.995185, 0.075, -0.0980171, 0.980785, 0.075, -0.19509, 0.95694, 0.075, -0.290285, 0.92388, 0.075, -0.382683, 0.881921, 0.075, -0.471397, 0.83147, 0.075, -0.55557, 0.77301, 0.075, -0.634393, 0.707107, 0.075, -0.707107, 0.634393, 0.075, -0.77301, 0.55557, 0.075, -0.83147, 0.471397, 0.075, -0.881921, 0.382683, 0.075, -0.92388, 0.290285, 0.075, -0.95694, 0.19509, 0.075, -0.980785, 0.0980171, 0.075, -0.995185, 1.22461e-16, 0.075, -1, -0.0980171, 0.075, -0.995185, -0.19509, 0.075, -0.980785, -0.290285, 0.075, -0.95694, -0.382683, 0.075, -0.92388, -0.471397, 0.075, -0.881921, -0.55557, 0.075, -0.83147, -0.634393, 0.075, -0.77301, -0.707107, 0.075, -0.707107, -0.77301, 0.075, -0.634393, -0.83147, 0.075, -0.55557, -0.881921, 0.075, -0.471397, -0.92388, 0.075, -0.382683, -0.95694, 0.075, -0.290285, -0.980785, 0.075, -0.19509, -0.995185, 0.075, -0.0980171, -1, 0.075, -1.83691e-16, -0.995185, 0.075, 0.0980171, -0.980785, 0.075, 0.19509, -0.95694, 0.075, 0.290285, -0.92388, 0.075, 0.382683, -0.881921, 0.075, 0.471397, -0.83147, 0.075, 0.55557, -0.77301, 0.075, 0.634393, -0.707107, 0.075, 0.707107, -0.634393, 0.075, 0.77301, -0.55557, 0.075, 0.83147, -0.471397, 0.075, 0.881921, -0.382683, 0.075, 0.92388, -0.290285, 0.075, 0.95694, -0.19509, 0.075, 0.980785, -0.0980171, 0.075, 0.995185, -2.44921e-16, 0.075, 1, 0, 0.025, 1, 0.0980171, 0.025, 0.995185, 0.19509, 0.025, 0.980785, 0.290285, 0.025, 0.95694, 0.382683, 0.025, 0.92388, 0.471397, 0.025, 0.881921, 0.55557, 0.025, 0.83147, 0.634393, 0.025, 0.77301, 0.707107, 0.025, 0.707107, 0.77301, 0.025, 0.634393, 0.83147, 0.025, 0.55557, 0.881921, 0.025, 0.471397, 0.92388, 0.025, 0.382683, 0.95694, 0.025, 0.290285, 0.980785, 0.025, 0.19509, 0.995185, 0.025, 0.0980171, 1, 0.025, 6.12303e-17, 0.995185, 0.025, -0.0980171, 0.980785, 0.025, -0.19509, 0.95694, 0.025, -0.290285, 0.92388, 0.025, -0.382683, 0.881921, 0.025, -0.471397, 0.83147, 0.025, -0.55557, 0.77301, 0.025, -0.634393, 0.707107, 0.025, -0.707107, 0.634393, 0.025, -0.77301, 0.55557, 0.025, -0.83147, 0.471397, 0.025, -0.881921, 0.382683, 0.025, -0.92388, 0.290285, 0.025, -0.95694, 0.19509, 0.025, -0.980785, 0.0980171, 0.025, -0.995185, 1.22461e-16, 0.025, -1, -0.0980171, 0.025, -0.995185, -0.19509, 0.025, -0.980785, -0.290285, 0.025, -0.95694, -0.382683, 0.025, -0.92388, -0.471397, 0.025, -0.881921, -0.55557, 0.025, -0.83147, -0.634393, 0.025, -0.77301, -0.707107, 0.025, -0.707107, -0.77301, 0.025, -0.634393, -0.83147, 0.025, -0.55557, -0.881921, 0.025, -0.471397, -0.92388, 0.025, -0.382683, -0.95694, 0.025, -0.290285, -0.980785, 0.025, -0.19509, -0.995185, 0.025, -0.0980171, -1, 0.025, -1.83691e-16, -0.995185, 0.025, 0.0980171, -0.980785, 0.025, 0.19509, -0.95694, 0.025, 0.290285, -0.92388, 0.025, 0.382683, -0.881921, 0.025, 0.471397, -0.83147, 0.025, 0.55557, -0.77301, 0.025, 0.634393, -0.707107, 0.025, 0.707107, -0.634393, 0.025, 0.77301, -0.55557, 0.025, 0.83147, -0.471397, 0.025, 0.881921, -0.382683, 0.025, 0.92388, -0.290285, 0.025, 0.95694, -0.19509, 0.025, 0.980785, -0.0980171, 0.025, 0.995185, -2.44921e-16, 0.025, 1, 0, -0.025, 1, 0.0980171, -0.025, 0.995185, 0.19509, -0.025, 0.980785, 0.290285, -0.025, 0.95694, 0.382683, -0.025, 0.92388, 0.471397, -0.025, 0.881921, 0.55557, -0.025, 0.83147, 0.634393, -0.025, 0.77301, 0.707107, -0.025, 0.707107, 0.77301, -0.025, 0.634393, 0.83147, -0.025, 0.55557, 0.881921, -0.025, 0.471397, 0.92388, -0.025, 0.382683, 0.95694, -0.025, 0.290285, 0.980785, -0.025, 0.19509, 0.995185, -0.025, 0.0980171, 1, -0.025, 6.12303e-17, 0.995185, -0.025, -0.0980171, 0.980785, -0.025, -0.19509, 0.95694, -0.025, -0.290285, 0.92388, -0.025, -0.382683, 0.881921, -0.025, -0.471397, 0.83147, -0.025, -0.55557, 0.77301, -0.025, -0.634393, 0.707107, -0.025, -0.707107, 0.634393, -0.025, -0.77301, 0.55557, -0.025, -0.83147, 0.471397, -0.025, -0.881921, 0.382683, -0.025, -0.92388, 0.290285, -0.025, -0.95694, 0.19509, -0.025, -0.980785, 0.0980171, -0.025, -0.995185, 1.22461e-16, -0.025, -1, -0.0980171, -0.025, -0.995185, -0.19509, -0.025, -0.980785, -0.290285, -0.025, -0.95694, -0.382683, -0.025, -0.92388, -0.471397, -0.025, -0.881921, -0.55557, -0.025, -0.83147, -0.634393, -0.025, -0.77301, -0.707107, -0.025, -0.707107, -0.77301, -0.025, -0.634393, -0.83147, -0.025, -0.55557, -0.881921, -0.025, -0.471397, -0.92388, -0.025, -0.382683, -0.95694, -0.025, -0.290285, -0.980785, -0.025, -0.19509, -0.995185, -0.025, -0.0980171, -1, -0.025, -1.83691e-16, -0.995185, -0.025, 0.0980171, -0.980785, -0.025, 0.19509, -0.95694, -0.025, 0.290285, -0.92388, -0.025, 0.382683, -0.881921, -0.025, 0.471397, -0.83147, -0.025, 0.55557, -0.77301, -0.025, 0.634393, -0.707107, -0.025, 0.707107, -0.634393, -0.025, 0.77301, -0.55557, -0.025, 0.83147, -0.471397, -0.025, 0.881921, -0.382683, -0.025, 0.92388, -0.290285, -0.025, 0.95694, -0.19509, -0.025, 0.980785, -0.0980171, -0.025, 0.995185, -2.44921e-16, -0.025, 1, 0, -0.075, 1, 0.0980171, -0.075, 0.995185, 0.19509, -0.075, 0.980785, 0.290285, -0.075, 0.95694, 0.382683, -0.075, 0.92388, 0.471397, -0.075, 0.881921, 0.55557, -0.075, 0.83147, 0.634393, -0.075, 0.77301, 0.707107, -0.075, 0.707107, 0.77301, -0.075, 0.634393, 0.83147, -0.075, 0.55557, 0.881921, -0.075, 0.471397, 0.92388, -0.075, 0.382683, 0.95694, -0.075, 0.290285, 0.980785, -0.075, 0.19509, 0.995185, -0.075, 0.0980171, 1, -0.075, 6.12303e-17, 0.995185, -0.075, -0.0980171, 0.980785, -0.075, -0.19509, 0.95694, -0.075, -0.290285, 0.92388, -0.075, -0.382683, 0.881921, -0.075, -0.471397, 0.83147, -0.075, -0.55557, 0.77301, -0.075, -0.634393, 0.707107, -0.075, -0.707107, 0.634393, -0.075, -0.77301, 0.55557, -0.075, -0.83147, 0.471397, -0.075, -0.881921, 0.382683, -0.075, -0.92388, 0.290285, -0.075, -0.95694, 0.19509, -0.075, -0.980785, 0.0980171, -0.075, -0.995185, 1.22461e-16, -0.075, -1, -0.0980171, -0.075, -0.995185, -0.19509, -0.075, -0.980785, -0.290285, -0.075, -0.95694, -0.382683, -0.075, -0.92388, -0.471397, -0.075, -0.881921, -0.55557, -0.075, -0.83147, -0.634393, -0.075, -0.77301, -0.707107, -0.075, -0.707107, -0.77301, -0.075, -0.634393, -0.83147, -0.075, -0.55557, -0.881921, -0.075, -0.471397, -0.92388, -0.075, -0.382683, -0.95694, -0.075, -0.290285, -0.980785, -0.075, -0.19509, -0.995185, -0.075, -0.0980171, -1, -0.075, -1.83691e-16, -0.995185, -0.075, 0.0980171, -0.980785, -0.075, 0.19509, -0.95694, -0.075, 0.290285, -0.92388, -0.075, 0.382683, -0.881921, -0.075, 0.471397, -0.83147, -0.075, 0.55557, -0.77301, -0.075, 0.634393, -0.707107, -0.075, 0.707107, -0.634393, -0.075, 0.77301, -0.55557, -0.075, 0.83147, -0.471397, -0.075, 0.881921, -0.382683, -0.075, 0.92388, -0.290285, -0.075, 0.95694, -0.19509, -0.075, 0.980785, -0.0980171, -0.075, 0.995185, -2.44921e-16, -0.075, 1, 0, -0.125, 1, 0.0980171, -0.125, 0.995185, 0.19509, -0.125, 0.980785, 0.290285, -0.125, 0.95694, 0.382683, -0.125, 0.92388, 0.471397, -0.125, 0.881921, 0.55557, -0.125, 0.83147, 0.634393, -0.125, 0.77301, 0.707107, -0.125, 0.707107, 0.77301, -0.125, 0.634393, 0.83147, -0.125, 0.55557, 0.881921, -0.125, 0.471397, 0.92388, -0.125, 0.382683, 0.95694, -0.125, 0.290285, 0.980785, -0.125, 0.19509, 0.995185, -0.125, 0.0980171, 1, -0.125, 6.12303e-17, 0.995185, -0.125, -0.0980171, 0.980785, -0.125, -0.19509, 0.95694, -0.125, -0.290285, 0.92388, -0.125, -0.382683, 0.881921, -0.125, -0.471397, 0.83147, -0.125, -0.55557, 0.77301, -0.125, -0.634393, 0.707107, -0.125, -0.707107, 0.634393, -0.125, -0.77301, 0.55557, -0.125, -0.83147, 0.471397, -0.125, -0.881921, 0.382683, -0.125, -0.92388, 0.290285, -0.125, -0.95694, 0.19509, -0.125, -0.980785, 0.0980171, -0.125, -0.995185, 1.22461e-16, -0.125, -1, -0.0980171, -0.125, -0.995185, -0.19509, -0.125, -0.980785, -0.290285, -0.125, -0.95694, -0.382683, -0.125, -0.92388, -0.471397, -0.125, -0.881921, -0.55557, -0.125, -0.83147, -0.634393, -0.125, -0.77301, -0.707107, -0.125, -0.707107, -0.77301, -0.125, -0.634393, -0.83147, -0.125, -0.55557, -0.881921, -0.125, -0.471397, -0.92388, -0.125, -0.382683, -0.95694, -0.125, -0.290285, -0.980785, -0.125, -0.19509, -0.995185, -0.125, -0.0980171, -1, -0.125, -1.83691e-16, -0.995185, -0.125, 0.0980171, -0.980785, -0.125, 0.19509, -0.95694, -0.125, 0.290285, -0.92388, -0.125, 0.382683, -0.881921, -0.125, 0.471397, -0.83147, -0.125, 0.55557, -0.77301, -0.125, 0.634393, -0.707107, -0.125, 0.707107, -0.634393, -0.125, 0.77301, -0.55557, -0.125, 0.83147, -0.471397, -0.125, 0.881921, -0.382683, -0.125, 0.92388, -0.290285, -0.125, 0.95694, -0.19509, -0.125, 0.980785, -0.0980171, -0.125, 0.995185, -2.44921e-16, -0.125, 1, 0, 0.125, 0, 0, 0.125, 1, 0.0980171, 0.125, 0.995185, 0.19509, 0.125, 0.980785, 0.290285, 0.125, 0.95694, 0.382683, 0.125, 0.92388, 0.471397, 0.125, 0.881921, 0.55557, 0.125, 0.83147, 0.634393, 0.125, 0.77301, 0.707107, 0.125, 0.707107, 0.77301, 0.125, 0.634393, 0.83147, 0.125, 0.55557, 0.881921, 0.125, 0.471397, 0.92388, 0.125, 0.382683, 0.95694, 0.125, 0.290285, 0.980785, 0.125, 0.19509, 0.995185, 0.125, 0.0980171, 1, 0.125, 6.12303e-17, 0.995185, 0.125, -0.0980171, 0.980785, 0.125, -0.19509, 0.95694, 0.125, -0.290285, 0.92388, 0.125, -0.382683, 0.881921, 0.125, -0.471397, 0.83147, 0.125, -0.55557, 0.77301, 0.125, -0.634393, 0.707107, 0.125, -0.707107, 0.634393, 0.125, -0.77301, 0.55557, 0.125, -0.83147, 0.471397, 0.125, -0.881921, 0.382683, 0.125, -0.92388, 0.290285, 0.125, -0.95694, 0.19509, 0.125, -0.980785, 0.0980171, 0.125, -0.995185, 1.22461e-16, 0.125, -1, -0.0980171, 0.125, -0.995185, -0.19509, 0.125, -0.980785, -0.290285, 0.125, -0.95694, -0.382683, 0.125, -0.92388, -0.471397, 0.125, -0.881921, -0.55557, 0.125, -0.83147, -0.634393, 0.125, -0.77301, -0.707107, 0.125, -0.707107, -0.77301, 0.125, -0.634393, -0.83147, 0.125, -0.55557, -0.881921, 0.125, -0.471397, -0.92388, 0.125, -0.382683, -0.95694, 0.125, -0.290285, -0.980785, 0.125, -0.19509, -0.995185, 0.125, -0.0980171, -1, 0.125, -1.83691e-16, -0.995185, 0.125, 0.0980171, -0.980785, 0.125, 0.19509, -0.95694, 0.125, 0.290285, -0.92388, 0.125, 0.382683, -0.881921, 0.125, 0.471397, -0.83147, 0.125, 0.55557, -0.77301, 0.125, 0.634393, -0.707107, 0.125, 0.707107, -0.634393, 0.125, 0.77301, -0.55557, 0.125, 0.83147, -0.471397, 0.125, 0.881921, -0.382683, 0.125, 0.92388, -0.290285, 0.125, 0.95694, -0.19509, 0.125, 0.980785, -0.0980171, 0.125, 0.995185, -2.44921e-16, 0.125, 1, 0, -0.125, 0, 0, -0.125, 1, 0.0980171, -0.125, 0.995185, 0.19509, -0.125, 0.980785, 0.290285, -0.125, 0.95694, 0.382683, -0.125, 0.92388, 0.471397, -0.125, 0.881921, 0.55557, -0.125, 0.83147, 0.634393, -0.125, 0.77301, 0.707107, -0.125, 0.707107, 0.77301, -0.125, 0.634393, 0.83147, -0.125, 0.55557, 0.881921, -0.125, 0.471397, 0.92388, -0.125, 0.382683, 0.95694, -0.125, 0.290285, 0.980785, -0.125, 0.19509, 0.995185, -0.125, 0.0980171, 1, -0.125, 6.12303e-17, 0.995185, -0.125, -0.0980171, 0.980785, -0.125, -0.19509, 0.95694, -0.125, -0.290285, 0.92388, -0.125, -0.382683, 0.881921, -0.125, -0.471397, 0.83147, -0.125, -0.55557, 0.77301, -0.125, -0.634393, 0.707107, -0.125, -0.707107, 0.634393, -0.125, -0.77301, 0.55557, -0.125, -0.83147, 0.471397, -0.125, -0.881921, 0.382683, -0.125, -0.92388, 0.290285, -0.125, -0.95694, 0.19509, -0.125, -0.980785, 0.0980171, -0.125, -0.995185, 1.22461e-16, -0.125, -1, -0.0980171, -0.125, -0.995185, -0.19509, -0.125, -0.980785, -0.290285, -0.125, -0.95694, -0.382683, -0.125, -0.92388, -0.471397, -0.125, -0.881921, -0.55557, -0.125, -0.83147, -0.634393, -0.125, -0.77301, -0.707107, -0.125, -0.707107, -0.77301, -0.125, -0.634393, -0.83147, -0.125, -0.55557, -0.881921, -0.125, -0.471397, -0.92388, -0.125, -0.382683, -0.95694, -0.125, -0.290285, -0.980785, -0.125, -0.19509, -0.995185, -0.125, -0.0980171, -1, -0.125, -1.83691e-16, -0.995185, -0.125, 0.0980171, -0.980785, -0.125, 0.19509, -0.95694, -0.125, 0.290285, -0.92388, -0.125, 0.382683, -0.881921, -0.125, 0.471397, -0.83147, -0.125, 0.55557, -0.77301, -0.125, 0.634393, -0.707107, -0.125, 0.707107, -0.634393, -0.125, 0.77301, -0.55557, -0.125, 0.83147, -0.471397, -0.125, 0.881921, -0.382683, -0.125, 0.92388, -0.290285, -0.125, 0.95694, -0.19509, -0.125, 0.980785, -0.0980171, -0.125, 0.995185, -2.44921e-16, -0.125, 1 )

[node name="JumperStraight" type="MeshInstance"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 1, 0 )
use_in_baked_light = true
mesh = SubResource( 1 )
material/0 = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Jumper" type="StaticBody" parent="." groups=[
"jumper_straight",
]]
collision_layer = 0
collision_mask = 2147483655

[node name="CollisionShape" type="CollisionShape" parent="Jumper"]
transform = Transform( 1, 0, 0, 0, 1, -3.12639e-13, 0, 3.12639e-13, 1, 0, 0, 0 )
shape = SubResource( 2 )

[node name="Collision1" type="Area" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Collision1"]
transform = Transform( 0.95, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 0.1, 0 )
shape = SubResource( 2 )

[node name="Position3D" type="Position3D" parent="Collision1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1000, 0 )

[node name="Collision2" type="Area" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Collision2"]
transform = Transform( 0.95, 0, 0, 0, -0.5, 3.25841e-07, 0, -1.62921e-07, -1, 0, -0.1, 0 )
shape = SubResource( 2 )

[node name="Position3D" type="Position3D" parent="Collision2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1000, 0 )
[connection signal="body_entered" from="Collision1" to="." method="_on_Collision1_body_entered"]
[connection signal="body_entered" from="Collision2" to="." method="_on_Collision2_body_entered"]
